# utokyo-FSC-IS4029L1-assignment-a1

./: Cargo.toml  README.md  rustfmt.toml
scripts/: collect.nu
src/: main.rs  shader.wgsl
