[package]
name = "utokyo-FSC-IS4029L1-assignment-a1"
version = "0.0.0"
edition = "2024"

[dependencies]
catppuccin = "2.5.1"
clap = { version = "4.5.39", features = ["derive"] }
color-eyre = "0.6.4"
futures = "0.3.31"
nalgebra = "0.33.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
wgpu = "25.0.0"
winit = "0.30.10"
